--- a/Patrija.Web/Views/Partials/Shared/_FormWithoutDescription.cshtml
+++ b/Patrija.Web/Views/Partials/Shared/_FormWithoutDescription.cshtml
@@ -24,7 +24,7 @@
             <span class="form__error-message" data-for="message">@Model.CommentFieldError</span>
         </div>
         <div class="form__row">
-            <button class="btn @Model.SubmitButtonClass btn--submit" type="submit">@Model.SubmitButtonText</button>
+            <button class="btn @Model.SubmitButtonClass btn--submit" type="button">@Model.SubmitButtonText</button>
         </div>
         <span class="form__message-success">@Model.SuccessMessage</span>
     </form>
