--- a/html/src/scss/modules/_featured-project.scss
+++ b/html/src/scss/modules/_featured-project.scss
@@ -13,14 +13,26 @@
 	padding: 154px 80px 278px 33.8%;
 	@include breakpoint(laptop) {
 		padding-top: 104px;
-		padding-bottom: 120px;
+		padding-bottom: 100px;
+	}
+	@include mq-only(lg) {
+		padding-bottom: 60px;
+	}
+	@include mq-only(md) {
+		padding: 101px 80px 100px 28.8%;
 	}
 }
 
 .featured-project__item--reverse {
 	padding: 200px 80px 200px 17%;
 	@include breakpoint(laptop) {
-		padding: 130px 80px 120px 12%;
+		padding: 130px 80px 100px 12%;
+	}
+	@include mq-only(lg) {
+		padding-bottom: 60px;
+	}
+	@include mq-only(md) {
+		padding: 100px 80px 100px 8%;
 	}
 }
 
@@ -38,12 +50,16 @@
 }
 
 .featured-project__text {
-	font-size: 18px;
-	line-height: 30px;
 	margin-bottom: 22px;
 	max-width: 712px;
 	@include breakpoint(laptop) {
 		max-width: 620px;
+	}
+	@include mq-only(lg) {
+		max-width: 560px;
+	}
+	@include mq-only(md) {
+		max-width: 410px;
 	}
 }
 
@@ -70,9 +86,6 @@
 		width: 100%;
 		height: 100%;
 	}
-	@include breakpoint(laptop) {
-		width: 46vw;
-	}
 }
 
 .featured-project__image-outer--reverse {
@@ -91,10 +104,10 @@
 
 .featured-project__image {
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	top: 0.5%;
+	left: 0.5%;
+	width: 99%;
+	height: 99%;
 }
 
 .featured-project__additional-image {
