--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -6,6 +6,9 @@
 	@include breakpoint(laptop) {
 		margin-bottom: 120px;
 	}
+	@include mq-only(md) {
+		margin-bottom: 80px;
+	}
 }
 
 .news-slider__background {
@@ -97,4 +100,7 @@
 .news-slider__text {
 	font-size: 14px;
 	line-height: 25px;
+	@include mq-only(lg) {
+		line-height: 22px;
+	}
 }
