--- a/html/src/scss/modules/_support.scss
+++ b/html/src/scss/modules/_support.scss
@@ -6,6 +6,9 @@
 	@include breakpoint(laptop) {
 		padding: 96px 0;
 	}
+	@include mq-only(md) {
+		padding: 60px 0;
+	}
 }
 
 .support__wrap {
@@ -18,6 +21,12 @@
 	justify-content: space-between;
 	position: relative;
 	z-index: 10;
+	@include mq-only(lg) {
+		padding: 0 5%;
+	}
+	@include mq-down(md) {
+		display: block;
+	}
 }
 
 .support__item {
@@ -28,6 +37,11 @@
 	border-radius: 10px;
 	display: flex;
 	align-items: center;
+	@include mq-down(md) {
+		display: block;
+		max-width: 100%;
+		margin-bottom: 24px;
+	}
 }
 
 .support__item-content {
@@ -52,6 +66,15 @@
 	top: -59%;
 	right: 80.6%;
 	width: 34.375vw;
+	@include breakpoint(laptop) {
+		top: -46%;
+	}
+	@include mq-only(lg) {
+		top: -30%;
+	}
+	@include mq-down(md) {
+		top: -100px;
+	}
 }
 
 .support__image-mask {
@@ -69,9 +92,6 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-	}
-	@include breakpoint(laptop) {
-		top: -30%;
 	}
 }
 
