--- a/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_ImageWithText.cshtml
@@ -4,8 +4,10 @@
 <div class="image-text">
 	<div class="wrap wrap--medium">
 		<div class="image-text__container@(Model.ContentPosition == ContentPosition.Right ? "image-text__container--reverse" : string.Empty)">
-			<div class="image-text__image">
-				<div class="image-text__img has-cover" style="background-image: url(@Model.Image.Url)"></div>
+			<div class="image-text__image-outer">
+				<div class="image-text__image">
+					<div class="image-text__img has-cover" style="background-image: url(@Model.Image.Url)"></div>
+				</div>
 			</div>
 			<div class="image-text__content">
 				<h2 class="h2 image-text__title">@Model.Title</h2>
