--- a/Patrija.Web/Views/Partials/NestedContent/_PageIntro.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_PageIntro.cshtml
@@ -11,10 +11,12 @@
 					<p class="page-intro__text">@Model.Text</p>
 				</div>
 			</div>
-			<div class="page-intro__image @(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
-				<div class="page-intro__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
-				<span class="circle circle--blue circle--large"></span>
-				<span class="circle circle--mint"></span>
+			<div class="page-intro__image-outer @(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
+				<div class="page-intro__image @(Dictionaries.ShapeVariantMap[Model.ShapeVariant])">
+					<div class="page-intro__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
+					<span class="circle circle--blue circle--large"></span>
+					<span class="circle circle--mint"></span>
+				</div>
 			</div>
 		</div>
 	</div>
