--- a/html/src/scss/modules/_about-us.scss
+++ b/html/src/scss/modules/_about-us.scss
@@ -12,15 +12,18 @@
 		padding-bottom: 30px;
 	}
 	@include mq-down(md) {
-		padding: 40px 0;
+		padding: 40px 0 20px;
 	}
 }
 
 .about-us__content {
 	padding: 65px 80px 65px 20.2%;
 	position: relative;
-	@include mq-down(md) {
+	@include mq-only(md) {
 		padding: 45px 60px 45px 29.2%;
+	}
+	@include mq-down(sm) {
+		padding: 230px 0 40px;
 	}
 }
 
@@ -48,6 +51,13 @@
 	}
 	@include mq-down(md) {
 		right: 78.6%;
+	}
+	@include mq-down(sm) {
+		top: -20px;
+		right: auto;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 80vw;
 	}
 }
 
