--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -9,6 +9,9 @@
 	@include mq-only(md) {
 		margin-bottom: 80px;
 	}
+	@include mq-down(sm) {
+		margin-bottom: 60px;
+	}
 }
 
 .news-slider__background {
