--- a/html/src/scss/plugins/_slick.scss
+++ b/html/src/scss/plugins/_slick.scss
@@ -109,6 +109,13 @@
 			font-size: 16px;
 		}
 	}
+	@include mq-down(sm) {
+		width: 30px;
+		height: 30px;
+		&::before {
+			font-size: 14px;
+		}
+	}
 }
 .slick-prev {
 	left: -84px;
