--- a/Patrija.Web/Views/BlogPage.cshtml
+++ b/Patrija.Web/Views/BlogPage.cshtml
@@ -1,4 +1,4 @@
 ﻿@inherits UmbracoViewPage<BlogPageViewModel>
 @{
-    Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model.HomeIntro });
+    Html.RenderAction<NestedContentController>(c => nameof(c.PageIntro), new { viewModel = Model,.HomeIntro });
 }
