--- a/html/src/html/shared/header/header.hbs
+++ b/html/src/html/shared/header/header.hbs
@@ -6,7 +6,7 @@
 			</a>
 			<div class="navigation">
 				{{#if menu}}
-					<nav class="nav">
+					<nav class="nav js-nav">
 						<ul class="nav__list" role="menubar">
 							{{#each menu}}
 								<li class="nav__item" role="menuitem">
@@ -17,7 +17,7 @@
 					</nav>
 				{{/if}}
 				<a class="btn btn--mint header__join-btn" href="javascript:;">{{joinUs}}</a>
-				<button class="nav-toggle" type="button">
+				<button class="nav-toggle js-nav-toggle" type="button">
 					<span class="nav-toggle__line nav-toggle__line--top"></span>
 					<span class="nav-toggle__line nav-toggle__line--middle"></span>
 					<span class="nav-toggle__line nav-toggle__line--bottom"></span>
