--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -30,6 +30,17 @@
 		bottom: 20px;
 		left: 47.9%;
 	}
+	@include breakpoint(laptop) {
+		padding-top: 100px;
+		padding-bottom: 140px;
+		margin-bottom: 86px;
+		background-size: cover;
+	}
+	@include mq-only(md) {
+		padding-top: 80px;
+		padding-bottom: 100px;
+		margin-bottom: 60px;
+	}
 }
 
 .news-slider__title {
