--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -41,6 +41,11 @@
 		padding-bottom: 100px;
 		margin-bottom: 60px;
 	}
+	@include mq-down(sm) {
+		padding-top: 40px;
+		padding-bottom: 100px;
+		margin-bottom: 20px;
+	}
 }
 
 .news-slider__title {
