--- a/html/src/scss/modules/_about-us.scss
+++ b/html/src/scss/modules/_about-us.scss
@@ -23,7 +23,7 @@
 		padding: 45px 60px 45px 29.2%;
 	}
 	@include mq-down(sm) {
-		padding: 230px 0 40px;
+		padding: 80vw 0 40px;
 	}
 }
 
@@ -58,7 +58,6 @@
 		left: 50%;
 		transform: translateX(-50%);
 		width: 80vw;
-		max-width: 80vw;
 	}
 }
 
