--- a/Patrija.Web/Views/BlogArticle.cshtml
+++ b/Patrija.Web/Views/BlogArticle.cshtml
@@ -1,4 +1,7 @@
 ﻿@inherits UmbracoViewPage<BlogPageViewModel>
 @{
+
+    Html.RenderAction<NestedContentController>(c => nameof(c.BlogIntro), new { viewModel = Model.BlogIntro });
+
     Html.RenderAction<NestedContentController>(c => nameof(c.BlogArticleContent), new { viewModel = Model.ArticleContent });
 }
