--- a/html/src/scss/layout/_forms.scss
+++ b/html/src/scss/layout/_forms.scss
@@ -15,6 +15,10 @@ textarea {
 	&::placeholder {
 		color: $black;
 	}
+	@include mq-down(sm) {
+		width: 100%;
+		display: block;
+	}
 }
 
 input {
@@ -49,6 +53,12 @@ textarea {
 	margin-right: 10px;
 	display: inline-block;
 	font-weight: 400;
+	@include mq-down(sm) {
+		width: 100%;
+		display: block;
+		line-height: 36px;
+		padding: 0 20px;
+	}
 }
 
 .form__error-message {
@@ -64,6 +74,10 @@ textarea {
 .btn--submit {
 	margin-left: 180px;
 	width: calc(100% - 180px);
+	@include mq-down(sm) {
+		width: auto;
+		margin-left: 0;
+	}
 }
 
 .form__message-success {
