--- a/html/src/scss/modules/_testimonials.scss
+++ b/html/src/scss/modules/_testimonials.scss
@@ -18,6 +18,11 @@
 		top: -58px;
 		right: 70px;
 	}
+	@include breakpoint(laptop) {
+		padding-top: 100px;
+		padding-bottom: 60px;
+		margin-bottom: 100px;
+	}
 }
 
 .testimonials__wrap {
