--- a/Patrija.Web/Views/Partials/Container/_HomeSupportContainer.cshtml
+++ b/Patrija.Web/Views/Partials/Container/_HomeSupportContainer.cshtml
@@ -17,8 +17,10 @@
                 }
                 <div class="circle circle--grey circle--small support__circle"></div>
             </div>
-        <div class="support__image-mask">
-            <div class="support__image has-cover" style="background-image: url('@Model.Image.Url');"></div>
+		<div class="support__image-outer">
+            <div class="support__image-mask">
+                <div class="support__image has-cover" style="background-image: url('@Model.Image.Url');"></div>
+            </div>
         </div>
     </div>
 </div>
