--- a/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
+++ b/Patrija.Web/Views/Partials/NestedContent/_AboutUs.cshtml
@@ -8,13 +8,15 @@
             <h2 class="h2 about-us__title">@Model.Title</h2>
             <p class="about-us__text">@Model.Text</p>
             @Html.Partial("Link", Model.Link, new ViewDataDictionary() { { "className", "btn" } })
-            <div class="about-us__images">
-                <div class="about-us__image">
-                    <div class="about-us__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
+			<div class="about-us__image-outer">
+                <div class="about-us__images">
+                    <div class="about-us__image">
+                        <div class="about-us__img has-cover" style="background-image: url('@Model.Image.Url');"></div>
+                    </div>
+                    @*<div class="about-us__shape">
+                    <img src="{{shape}}" alt="">
+                    </div>*@
                 </div>
-                @*<div class="about-us__shape">
-                <img src="{{shape}}" alt="">
-            </div>*@
             </div>
         </div>
     </div>
