responsive featured projects

--- a/html/src/scss/modules/_footer.scss
+++ b/html/src/scss/modules/_footer.scss
@@ -102,6 +102,9 @@
 			transform: translateX(-15px) scale(1);
 		}
 	}
+	@include mq-down(sm) {
+		font-size: 14px;
+	}
 }
 
 .footer__copyright-text {
